@@ -3,120 +3,134 @@ import commons.Expense;
 import commons.Participant;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import server.database.ExpenseRepository;
+import server.ExpenseService;
+
 import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.*;
 
 class ExpenseControllerTest {
 
+    @InjectMocks
     private ExpenseController controller;
 
     @Mock
-    private ExpenseRepository repository;
+    private ExpenseService expenseService;
 
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
-        controller = new ExpenseController(repository);
     }
 
-
     @Test
-    void addExpense()
-    {
-        Expense expense = new Expense(new Participant("Jodie","Zhao"),"CSE tution fee",16000,"EUR","2023-08-27",List.of(new Participant("Jodie","Zhao")),"Education");
+    void addExpenseTest() {
+        Expense expense = new Expense(new Participant("Jodie","Zhao"),"CSE tuition fee",16000,
+                "EUR","2023-08-27",List.of(new Participant("Jodie","Zhao")),"Education");
 
-        when(repository.save(expense)).thenReturn(expense);
-
+        when(expenseService.createExpense(any(Expense.class))).thenReturn(expense);
         ResponseEntity<Void> response = controller.add(expense);
+        verify(expenseService, times(1)).createExpense(any(Expense.class));
 
-        verify(repository, times(1)).save(expense);
-
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
     }
 
     @Test
-    void getAllExpenses()
-    {
-        Expense expense1=new Expense(new Participant("Carlos","Sainz"),"dinner",16000,"EUR","2023-08-31",List.of(new Participant("Carlos","Sainz")),"Food");
-        Expense expense2=new Expense(new Participant("Steph","Curry"),"dinner",16000,"EUR","2023-08-31",List.of(new Participant("Steph","Curry")),"Food");
+    void getAllExpensesTest() {
+        Expense expense1=new Expense(new Participant("Carlos","Sainz"),"dinner",16000,
+                "EUR","2023-08-31",List.of(new Participant("Carlos","Sainz")),"Food");
+        Expense expense2=new Expense(new Participant("Steph","Curry"),"dinner",16000,
+                "EUR","2023-08-31",List.of(new Participant("Steph","Curry")),"Food");
         List<Expense> expenses = Arrays.asList(expense1, expense2);
 
-        when(repository.findAll()).thenReturn(expenses);
-
+        when(expenseService.getAllExpenses()).thenReturn(expenses);
         List<Expense> result = controller.getAll();
+        verify(expenseService, times(1)).getAllExpenses();
 
-        verify(repository, times(1)).findAll();
-
+        assertNotNull(result);
         assertEquals(expenses, result);
-        when(repository.findAll()).thenReturn(expenses);
-        assertEquals(expenses, controller.getAll());
     }
 
     @Test
-    void filterExpensesByDate()
-    {
+    void filterExpensesByDateTest() {
         String date = "2023-08-27";
-        Expense expense=new Expense(new Participant("Jodie","Zhao"),"CSE tution fee",16000,"EUR","2023-08-27",List.of(new Participant("Jodie","Zhao")),"Education");
-        List<Expense> expenses = Arrays.asList(expense);
+        Expense expense=new Expense(new Participant("Jodie","Zhao"),"CSE tuition fee",16000,
+                "EUR","2023-08-27",List.of(new Participant("Jodie","Zhao")),"Education");
+        List<Expense> expenses = List.of(expense);
 
-        when(repository.findAllByDate(date)).thenReturn(expenses);
-
+        when(expenseService.filterByDate(date)).thenReturn(expenses);
         List<Expense> result = controller.filterByDate(date);
+        verify(expenseService, times(1)).filterByDate(date);
 
-        verify(repository, times(1)).findAllByDate(date);
-
+        assertNotNull(result);
         assertEquals(expenses, result);
     }
 
     @Test
-    void addMoneyTransfer()
+    void addMoneyTransferTest() {
+        Expense transfer = new Expense(new Participant("Jay","Z"),"dinner",16000,
+                "EUR","2023-08-03",List.of(new Participant("Jay","Z")),"food");
+
+        when(expenseService.createExpense(any(Expense.class))).thenReturn(transfer);
+        ResponseEntity<Void> response = controller.add(transfer);
+        verify(expenseService,times(1)).createExpense(any(Expense.class));
+
+        assertNotNull(response);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+    }
+
+    @Test
+    void filterExpensesByParticipantTest()
     {
-        Expense transfer = new Expense(new Participant("Jay","Z"),"dinner",16000,"EUR","2023-08-03",List.of(new Participant("Jay","Z")),"food");
-        ResponseEntity<Void> responseEntity = controller.addMoneyTransfer(transfer);
+        Expense expense=new Expense(new Participant("Jodie","Zhao"),"CSE tuition fee",16000,
+                "EUR","2023-08-27",List.of(new Participant("Jodie","Zhao")),"Education");
+        Participant participant=new Participant("Jodie","Zhao");
+
+        when(expenseService.filterByParticipantId(participant.getId())).thenReturn(List.of(expense));
+        ResponseEntity<List<Expense>> responseEntity = controller.filterExpenseByParticipant(participant.getId());
+
+        assertNotNull(responseEntity);
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
-        verify(repository, times(1)).save(transfer);
+        List<Expense> responseResult = responseEntity.getBody();
+        assertNotNull(responseResult);
+        assertEquals(List.of(expense), responseResult);
     }
 
     @Test
-    void filterExpensesByParticipant()
+    void filterExpensesInvolvingSomeoneTest()
     {
-        Expense expense=new Expense(new Participant("Jodie","Zhao"),"CSE tution fee",16000,"EUR","2023-08-27",List.of(new Participant("Jodie","Zhao")),"Education");
+        Expense expense=new Expense(new Participant("Jodie","Zhao")," CSE tuition fee",16000,
+                "EUR","2023-08-27",List.of(new Participant("Jodie","Zhao")),"Education");
         Participant participant=new Participant("Jodie","Zhao");
-        when(repository.findAllByParticipant(participant)).thenReturn(List.of(expense));
-        assertEquals(List.of(expense), controller.filterByPerson(participant));
-    }
 
-    @Test
-    void filterExpensesInvolvingSomeone()
-    {
-        Expense expense=new Expense(new Participant("Jodie","Zhao")," CSE tution fee",16000,"EUR","2023-08-27",List.of(new Participant("Jodie","Zhao")),"Education");
-        Participant participant=new Participant("Jodie","Zhao");
-        when(repository.findAllBySplittingOptionContaining(participant)).thenReturn(List.of(expense));
-        assertEquals(List.of(expense), controller.filterByInvolving(participant));
+        when(expenseService.filterByInvolving(participant.getId())).thenReturn(List.of(expense));
+        ResponseEntity<List<Expense>> responseEntity = controller.filterByInvolving(participant.getId());
+
+        assertNotNull(responseEntity);
+        assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
+        List<Expense> responseResult = responseEntity.getBody();
+        assertNotNull(responseResult);
+        assertEquals(List.of(expense), responseResult);
     }
 
 
     @Test
     public void testUpdateExpense() {
         long id = 1;
-        Expense updatedExpense = new Expense(new Participant("Yanran","Zhao")," CSE tution fee",16000,"EUR","2023-08-27",List.of(new Participant("Jodie","Zhao")),"Education");
-        Expense existingExpense = new Expense(new Participant("Jodie","Zhao")," CSE tution fee",16000,"EUR","2023-08-27",List.of(new Participant("Jodie","Zhao")),"Education");
+        Expense updatedExpense = new Expense(new Participant("Yanran","Zhao")," CSE tuition fee",16000,
+                "EUR","2023-08-27",List.of(new Participant("Jodie","Zhao")),"Education");
 
-        when(repository.findById(id)).thenReturn(Optional.of(existingExpense));
-        when(repository.save(existingExpense)).thenReturn(existingExpense);
-
+        when(expenseService.updateExpense(id, updatedExpense)).thenReturn(updatedExpense);
         ResponseEntity<Void> response = controller.update(id, updatedExpense);
-
-        verify(repository, times(1)).findById(id);
-        verify(repository, times(1)).save(existingExpense);
+        verify(expenseService, times(1)).updateExpense(id, updatedExpense);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
     }
@@ -124,19 +138,17 @@ class ExpenseControllerTest {
     @Test
     public void testDeleteExpense() {
         long id = 1;
-
-        // Mocking repository behavior to return true for existsById(1L)
-        when(repository.existsById(id)).thenReturn(true);
+        when(expenseService.deleteExpense(id)).thenReturn(ResponseEntity.ok().build());
 
         ResponseEntity<Void> response = controller.delete(id);
+        verify(expenseService, times(1)).deleteExpense(id);
 
-        // Verify that deleteById is called with ID 1 exactly once
-        verify(repository, times(1)).deleteById(id);
-
-        // Verify that the controller returns HttpStatus.OK
+        assertNotNull(response);
         assertEquals(HttpStatus.OK, response.getStatusCode());
     }
 
 }
+
+
 
 
